PR-3555: Checkstyle and documentation issues fixed