@@ -1,116 +1,119 @@
 package io.openems.edge.phoenixcontact.plcnext.loadcircuit;
 
-import java.util.List;
-
-import org.junit.jupiter.api.Assertions;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
-
 import com.google.gson.JsonArray;
 import com.google.gson.JsonObject;
-
 import io.openems.edge.phoenixcontact.plcnext.common.mapper.PlcNextGdsDataMappedValue;
 import io.openems.edge.phoenixcontact.plcnext.common.mapper.PlcNextGdsDataToChannelMapperImpl;
+import org.junit.Before;
+import org.junit.Test;
+
+import java.util.List;
+
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotNull;
 
 public class PlcNextGdsLoadCircuitDataToChannelMapperTest {
 
 	private PlcNextGdsDataToChannelMapperImpl dataMapper;
 	private String instanceName;
 
-	@BeforeEach
+	@Before
 	public void setupBefore() {
-		dataMapper = new PlcNextGdsDataToChannelMapperImpl();
-		instanceName = "LoadCircuit.";
+		this.dataMapper = new PlcNextGdsDataToChannelMapperImpl();
+		this.instanceName = "LoadCircuit.";
 	}
 
 	@Test
 	public void testSinglePrimitiveVariableMapping_Successfully() {
 		// prep
-		Integer expectedValue = 12345;
+		var expectedValue = 12345;
 
-		JsonObject primitiveVariable = new JsonObject();
-		primitiveVariable.addProperty("path", instanceName + "MaxPowerExport");
+		var primitiveVariable = new JsonObject();
+		primitiveVariable.addProperty("path", this.instanceName + "MaxPowerExport");
 		primitiveVariable.addProperty("value", expectedValue);
 
 		// test
-		PlcNextGdsDataMappedValue mappedValue = dataMapper.mapSingleValueToChannel(primitiveVariable, instanceName,
+		var mappedValue = this.dataMapper.mapSingleValueToChannel(primitiveVariable,
+				this.instanceName,
 				"jUnit", PlcNextLoadCircuitGdsDataReadMappingDefinition.values());
 
 		// check
-		Assertions.assertNotNull(mappedValue);
+		assertNotNull(mappedValue);
 
-		Assertions.assertEquals(PlcNextLoadCircuit.ChannelId.MAX_ACTIVE_POWER_EXPORT, mappedValue.getChannelId());
-		Assertions.assertEquals(expectedValue, mappedValue.getValue());
+		assertEquals(PlcNextLoadCircuit.ChannelId.MAX_ACTIVE_POWER_EXPORT, mappedValue.getChannelId());
+		assertEquals(expectedValue, mappedValue.getValue());
 	}
 
 	@Test
 	public void testAllPrimitiveVariableMapping_Successfully() {
 		// prep
-		Integer expectedValue = 12345;
-
-		JsonObject apiResponse = new JsonObject();
+		var apiResponse = new JsonObject();
 		apiResponse.addProperty("apVersion", "1.13.0.0");
 		apiResponse.addProperty("projectCRC", 1410814331);
 		apiResponse.addProperty("userAuthenticationRequired", true);
 
-		JsonArray variables = new JsonArray();
-		JsonObject primitiveVariable = new JsonObject();
-		primitiveVariable.addProperty("path", instanceName + "MaxReactivePower");
+        var expectedValue = 12345;
+		var primitiveVariable = new JsonObject();
+		primitiveVariable.addProperty("path", this.instanceName + "MaxReactivePower");
 		primitiveVariable.addProperty("value", expectedValue);
-		variables.add(primitiveVariable);
-		apiResponse.add("variables", variables);
+
+		var variables = new JsonArray();
+        variables.add(primitiveVariable);
+
+        apiResponse.add("variables", variables);
 
 		// test
-		List<PlcNextGdsDataMappedValue> mappedValues = dataMapper.mapAllValuesToChannels(variables, instanceName,
+		List<PlcNextGdsDataMappedValue> mappedValues = this.dataMapper.mapAllValuesToChannels(variables,
+				this.instanceName,
 				"jUnit", PlcNextLoadCircuitGdsDataReadMappingDefinition.values());
 
-		// check
-		Assertions.assertNotNull(mappedValues);
-		Assertions.assertEquals(1, mappedValues.size());
+        // check
+        assertNotNull(mappedValues);
+		assertEquals(1, mappedValues.size());
 
-		PlcNextGdsDataMappedValue mappedValue = mappedValues.get(0);
-		Assertions.assertEquals(PlcNextLoadCircuit.ChannelId.MAX_REACTIVE_POWER, mappedValue.getChannelId());
-		Assertions.assertEquals(expectedValue, mappedValue.getValue());
+		var mappedValue = mappedValues.getFirst();
+		assertEquals(PlcNextLoadCircuit.ChannelId.MAX_REACTIVE_POWER, mappedValue.getChannelId());
+		assertEquals(expectedValue, mappedValue.getValue());
 	}
 
 	@Test
 	public void testAllPlcNextVariablesAreMapped_Successfully() {
 		// prep
-		Integer expectedValueMaxPowerExport = 11001;
-		Integer expectedValueMaxPowerImport = 22001;
+		var variables = new JsonArray();
 
-		JsonArray variables = new JsonArray();
-
-		JsonObject varPhaseVoltages = new JsonObject();
-		varPhaseVoltages.addProperty("path", instanceName + "MaxPowerExport");
+		var expectedValueMaxPowerExport = 11001;
+		var varPhaseVoltages = new JsonObject();
+		varPhaseVoltages.addProperty("path", this.instanceName + "MaxPowerExport");
 		varPhaseVoltages.addProperty("value", expectedValueMaxPowerExport);
 		variables.add(varPhaseVoltages);
 
-		JsonObject varNeutralCurrent = new JsonObject();
-		varNeutralCurrent.addProperty("path", instanceName + "MaxPowerImport");
+        var expectedValueMaxPowerImport = 22001;
+		var varNeutralCurrent = new JsonObject();
+		varNeutralCurrent.addProperty("path", this.instanceName + "MaxPowerImport");
 		varNeutralCurrent.addProperty("value", expectedValueMaxPowerImport);
 		variables.add(varNeutralCurrent);
 
-		int mappedVariableCount = 2;
+		var mappedVariableCount = 2;
 
 		// test
-		List<PlcNextGdsDataMappedValue> mappedValues = dataMapper.mapAllValuesToChannels(variables, instanceName,
+		var mappedValues = this.dataMapper.mapAllValuesToChannels(variables,
+				this.instanceName,
 				"jUnit", PlcNextLoadCircuitGdsDataReadMappingDefinition.values());
 
 		// check
-		Assertions.assertNotNull(mappedValues);
-		Assertions.assertEquals(mappedVariableCount, mappedValues.size());
+		assertNotNull(mappedValues);
+		assertEquals(mappedVariableCount, mappedValues.size());
 
-		PlcNextGdsDataMappedValue maxPowerExport = mappedValues.stream()//
+		var maxPowerExport = mappedValues.stream()//
 				.filter(item -> PlcNextLoadCircuit.ChannelId.MAX_ACTIVE_POWER_EXPORT == item.getChannelId())//
 				.findFirst().orElse(null);
-		Assertions.assertNotNull(maxPowerExport);
-		Assertions.assertEquals((Object) expectedValueMaxPowerExport, maxPowerExport.getValue());
+		assertNotNull(maxPowerExport);
+		assertEquals(expectedValueMaxPowerExport, maxPowerExport.getValue());
 
-		PlcNextGdsDataMappedValue maxPowerImport = mappedValues.stream()//
+		var maxPowerImport = mappedValues.stream()//
 				.filter(item -> PlcNextLoadCircuit.ChannelId.MAX_ACTIVE_POWER_IMPORT == item.getChannelId())//
 				.findFirst().orElse(null);
-		Assertions.assertNotNull(maxPowerImport);
-		Assertions.assertEquals((Object) expectedValueMaxPowerImport, maxPowerImport.getValue());
+		assertNotNull(maxPowerImport);
+		assertEquals(expectedValueMaxPowerImport, maxPowerImport.getValue());
 	}
 }
